--- a/kubernetes.yml.template
+++ b/kubernetes.yml.template
@@ -25,16 +25,16 @@ spec:
           containerPort: ${PORT}
           protocol: TCP
         volumeMounts:
-          - name: podinfo
-            mountPath: /tmp
-            readOnly: false
-    volumes:
-      - name: podinfo
-        downwardAPI:
-          items:
-          - path: "labels"
-            fieldRef:
-              -fieldPath: metadata.labels
+            - name: podinfo
+              mountPath: /tmp
+              readOnly: false
+      volumes:
+        - name: podinfo
+          downwardAPI:
+            items:
+            - path: "labels"
+              fieldRef:
+                fieldPath: metadata.labels
       imagePullSecrets:
         - name: wercker
 ---
